[package]
name        = "take-breath"
description = "A program that reminds you when to take a breath from your computer."
repository  = "https://github.com/markmelix/take-breath"
authors     = ["Mark Meliksetyan <markmelix@gmail.com>"]
keywords    = ["computer-hygiene", "health"]
categories  = ["accessibility", "command-line-utilities", "date-and-time"]
license     = "MIT"
readme      = "README.md"
edition     = "2018"
version     = "0.1.2"

[dependencies]
notify-rust = "4.5.2"
toml = "0.5.8"
user-idle = "0.5.0"
humantime-serde = "1.0.1"
humantime = "2.1.0"
dirs = "3.0.2"

[dependencies.serde]
version = "1.0.127"
features = ["derive"]
