[package]
name        = "take-breath"
description = "A program that reminds you when to take a breath from your computer."
repository  = "https://github.com/markmelix/take-breath"
authors     = ["Mark Meliksetyan <markmelix@gmail.com>"]
keywords    = ["computer-hygiene", "health"]
categories  = ["accessibility", "command-line-utilities", "date-and-time"]
license     = "MIT"
readme      = "README.md"
edition     = "2018"
version     = "0.1.5"

[dependencies]
user-idle       = { version = "0.5.0" }
clap            = { version = "2.33.3" , optional = true }
notify-rust     = { version = "4.5.2"  , optional = true }
dirs            = { version = "3.0.2"  , optional = true }
toml            = { version = "0.5.8"  , optional = true }
serde           = { version = "1.0.127", features = ["derive"], optional = true }
humantime-serde = { version = "1.0.1"  , optional = true }

[features]
default = ["notify", "config", "cli"]
notify  = ["notify-rust"]
config  = ["serde/derive", "humantime-serde", "toml", "dirs"]
cli     = ["clap"]